--- a/package.json
+++ b/package.json
@@ -6,14 +6,34 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix"
   },
   "dependencies": {
-    "preact": "^10.26.9"
+    "@mantine/core": "^8.1.3",
+    "@mantine/dates": "^8.1.3",
+    "@mantine/form": "^8.1.3",
+    "@mantine/hooks": "^8.1.3",
+    "dayjs": "^1.11.13",
+    "motion": "^12.23.3",
+    "nanoid": "^5.1.5",
+    "preact": "^10.26.9",
+    "react-icons": "^5.5.0",
+    "recharts": "^3.1.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@preact/preset-vite": "^2.10.2",
+    "eslint": "^9.30.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "rollup-plugin-visualizer": "^6.0.3",
     "typescript": "~5.8.3",
-    "vite": "^7.0.3"
+    "typescript-eslint": "^8.36.0",
+    "vite": "^7.0.3",
+    "vite-plugin-pwa": "^1.0.1"
   }
 }
