--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@mantine/form": "^8.1.3",
     "@mantine/hooks": "^8.1.3",
     "dayjs": "^1.11.13",
+    "dexie": "^4.0.11",
+    "dexie-react-hooks": "^1.1.7",
     "motion": "^12.23.3",
-    "nanoid": "^5.1.5",
     "preact": "^10.26.9",
+    "randomcolor": "^0.6.2",
     "react-icons": "^5.5.0",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
     "@preact/preset-vite": "^2.10.2",
+    "@types/randomcolor": "^0.5.9",
     "eslint": "^9.30.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
