--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/carry-tracker.png"
   },
   "dependencies": {
     "@mantine/core": "^8.1.3",
@@ -28,6 +29,7 @@
     "@eslint/js": "^9.30.1",
     "@preact/preset-vite": "^2.10.2",
     "@types/randomcolor": "^0.5.9",
+    "@vite-pwa/assets-generator": "^1.0.0",
     "eslint": "^9.30.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
