--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "dexie-react-hooks": "^1.1.7",
-    "motion": "^12.23.3",
     "preact": "^10.26.9",
     "randomcolor": "^0.6.2",
     "react-icons": "^5.5.0",
+    "react-masonry-css": "^1.0.16",
     "recharts": "^3.1.0"
   },
   "devDependencies": {
