--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/hooks": "^8.1.3",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
+    "dexie-export-import": "^4.1.4",
     "dexie-react-hooks": "^1.1.7",
     "preact": "^10.26.9",
     "randomcolor": "^0.6.2",
