--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
-    "@preact/preset-vite": "^2.10.2",
+    "@prefresh/vite": "^2.4.8",
     "@types/randomcolor": "^0.5.9",
     "@vite-pwa/assets-generator": "^1.0.0",
     "eslint": "^9.30.1",
