--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/form": "^8.1.3",
     "@mantine/hooks": "^8.1.3",
     "@mantine/notifications": "^8.1.3",
+    "@tanstack/react-virtual": "^3.13.12",
     "dayjs": "^1.11.13",
     "dexie": "^4.0.11",
     "dexie-export-import": "^4.1.4",
