--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
-    "generate-pwa-assets": "pwa-assets-generator --preset minimal-2023 public/carry-tracker.png"
+    "lint:fix": "eslint src --fix"
   },
   "dependencies": {
     "@mantine/core": "^8.1.3",
@@ -23,6 +22,7 @@
     "dexie": "^4.0.11",
     "dexie-export-import": "^4.1.4",
     "dexie-react-hooks": "^1.1.7",
+    "motion": "^12.23.11",
     "preact": "^10.26.9",
     "randomcolor": "^0.6.2",
     "react-icons": "^5.5.0",
