--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^16.3.0",
     "rollup-plugin-visualizer": "^6.0.3",
-    "typescript": "~5.8.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.36.0",
     "vite": "^7.0.3",
     "vite-plugin-pwa": "^1.0.1"
