--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "randomcolor": "^0.6.2",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
-    "recharts": "^3.3.0"
+    "recharts": "3.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
