--- a/package.json
+++ b/package.json
@@ -23,17 +23,20 @@
     "dexie-export-import": "^4.1.4",
     "dexie-react-hooks": "^4.2.0",
     "motion": "^12.23.11",
-    "preact": "^10.26.9",
     "randomcolor": "^0.6.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
-    "recharts": "3.3.0"
+    "recharts": "^3.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@prefresh/vite": "^2.4.8",
     "@types/randomcolor": "^0.5.9",
+    "@types/react": "^19.2.7",
+    "@types/react-dom": "^19.2.3",
     "@vite-pwa/assets-generator": "^1.0.0",
+    "@vitejs/plugin-react": "^5.1.2",
     "eslint": "^9.39.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
