--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "eslint": "^9.39.1",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-react-you-might-not-need-an-effect": "^0.8.3",
     "globals": "^16.3.0",
     "rollup-plugin-visualizer": "^6.0.3",
     "typescript": "^5.9.2",
